HFForum Send Request

--- a/src/ZectranetBundle/Resources/views/errors.html.twig
+++ b/src/ZectranetBundle/Resources/views/errors.html.twig
@@ -12,7 +12,11 @@
         <div class="row" ng-repeat="error in errors" style="margin-top: 20px;">
             <div class="col-md-12">
                 <div class="img-thumbnail" style="padding: 15px 20px; box-shadow: 0 0 6px 0 darkseagreen; width: 100%;">
+                    <p class="pull-left text-primary">
+                        <b>#[[ error.id ]]</b>
+                    </p>
                     <p class="pull-right text-muted"><i>[[ error.date ]]</i></p>
+                    <div class="clearfix"></div>
                     <h4 class="text-info" style="text-shadow: 1px 0 darkorchid;">Error Message:</h4>
                     <div class="message-block" ng-bind-html="error.message"></div>
                     <h4 class="text-info" style="text-shadow: 1px 0 darkorchid;">Where:</h4>
