--- a/src/ZectranetBundle/Resources/views/QnASettings.html.twig
+++ b/src/ZectranetBundle/Resources/views/QnASettings.html.twig
@@ -106,79 +106,111 @@
                     </div>
                 </div>
             </div>
-        </div>
 
-        <!-- START MODAL -->
-        <div class="modal fade" id="send_request_by_HO_contacts" tabindex="-1">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header " style="background-color: #e7e7e7 !important;">
-                        <button type="button" class="close" data-dismiss="modal">&times;</button>
-                        <h4 class="modal-title" style="color: #000000;" align="center">
-                            Send Request
-                        </h4>
+            <!------------ Begin of project log ------------>
+            <div class="row">
+                <div class="col-xs-12">
+                    <div class="list-group">
+                        <div class="list-group-item active" style="background-color: #ddedf4; color: #000000;">
+                            <div class="text-center">
+                                Project logs
+                            </div>
+                        </div>
+                        <div class="list-group-item">
+                            <table class="table table-striped table-hover">
+                                <thead>
+                                <tr>
+                                    <th>#</th>
+                                    <th>Event</th>
+                                    <th>Date</th>
+                                </tr>
+                                </thead>
+                                <tbody style="height: 200px; max-height: 400px; overflow-y: auto;">
+                                <tr ng-repeat="log in QnALogs">
+                                    <td>[[ $index + 1 ]]</td>
+                                    <td>[[ log.event ]]</td>
+                                    <td>[[ log.date ]]</td>
+                                </tr>
+                                </tbody>
+                            </table>
+                        </div>
                     </div>
+                </div>
+            </div>
+            <!------------ End of project log -------------->
 
-                    <div class="modal-body">
-                        <div class="row">
-                            <div class="col-xs-offset-1 col-xs-10">
-                                <div class="form-group">
-                                    <label>
-                                        <b>Request Message</b>
-                                    </label>
-                                    <textarea  class="form-control " rows="5" style="width: 100%;resize: vertical;" ng-model="HO_contact_message"></textarea>
-                                    <br/>
+            <!-- START MODAL -->
+            <div class="modal fade" id="send_request_by_HO_contacts" tabindex="-1">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header " style="background-color: #e7e7e7 !important;">
+                            <button type="button" class="close" data-dismiss="modal">&times;</button>
+                            <h4 class="modal-title" style="color: #000000;" align="center">
+                                Send Request
+                            </h4>
+                        </div>
+
+                        <div class="modal-body">
+                            <div class="row">
+                                <div class="col-xs-offset-1 col-xs-10">
+                                    <div class="form-group">
+                                        <label>
+                                            <b>Request Message</b>
+                                        </label>
+                                        <textarea class="form-control " rows="5" style="width: 100%;resize: vertical;" ng-model="HO_contact_message"></textarea>
+                                        <br/>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
 
-                    <div class="modal-footer">
-                        <div class="btn-group">
-                            <button type="button" class="btn btn-success btn-default" ng-click="SendRequest(1,HO_contact_message,HO_Contacts);">Send Request</button>
-                            <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                        <div class="modal-footer">
+                            <div class="btn-group">
+                                <button type="button" class="btn btn-success btn-default" ng-click="SendRequest(1,HO_contact_message,HO_Contacts);">Send Request</button>
+                                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                            </div>
                         </div>
-                    </div>
 
+                    </div>
                 </div>
             </div>
-        </div>
 
-        <div class="modal fade" id="send_request_by_All_contacts" tabindex="-1">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header " style="background-color: #e7e7e7 !important;">
-                        <button type="button" class="close" data-dismiss="modal">&times;</button>
-                        <h4 class="modal-title" style="color: #000000;" align="center">
-                            Send Request
-                        </h4>
-                    </div>
+            <div class="modal fade" id="send_request_by_All_contacts" tabindex="-1">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header " style="background-color: #e7e7e7 !important;">
+                            <button type="button" class="close" data-dismiss="modal">&times;</button>
+                            <h4 class="modal-title" style="color: #000000;" align="center">
+                                Send Request
+                            </h4>
+                        </div>
 
-                    <div class="modal-body">
-                        <div class="row">
-                            <div class="col-xs-offset-1 col-xs-10">
-                                <div class="form-group">
-                                    <label>
-                                        <b>Request Message</b>
-                                    </label>
-                                    <textarea  class="form-control " rows="5" style="width: 100%;resize: vertical;" ng-model="All_contact_message"></textarea>
-                                    <br/>
+                        <div class="modal-body">
+                            <div class="row">
+                                <div class="col-xs-offset-1 col-xs-10">
+                                    <div class="form-group">
+                                        <label>
+                                            <b>Request Message</b>
+                                        </label>
+                                        <textarea  class="form-control " rows="5" style="width: 100%;resize: vertical;" ng-model="All_contact_message"></textarea>
+                                        <br/>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
 
-                    <div class="modal-footer">
-                        <div class="btn-group">
-                            <button type="button" class="btn btn-success btn-default" ng-click="SendRequest(2,All_contact_message,All_Contacts);">Send Request</button>
-                            <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                        <div class="modal-footer">
+                            <div class="btn-group">
+                                <button type="button" class="btn btn-success btn-default" ng-click="SendRequest(2,All_contact_message,All_Contacts);">Send Request</button>
+                                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                            </div>
                         </div>
-                    </div>
 
+                    </div>
                 </div>
             </div>
+            <!-- END MODAL -->
         </div>
-        <!-- END MODAL -->
     </div>
 
 
