--- a/src/ZectranetBundle/Resources/views/headerForumSettings.html.twig
+++ b/src/ZectranetBundle/Resources/views/headerForumSettings.html.twig
@@ -246,6 +246,38 @@
             </div>
         </div>
 
+        <!------------ Begin of project log ------------>
+        <div class="row">
+            <div class="col-xs-12">
+                <div class="list-group">
+                    <div class="list-group-item active" style="background-color: #ddedf4; color: #000000;">
+                        <div class="text-center">
+                            Project logs
+                        </div>
+                    </div>
+                    <div class="list-group-item">
+                        <table class="table table-striped table-hover">
+                            <thead>
+                            <tr>
+                                <th>#</th>
+                                <th>Event</th>
+                                <th>Date</th>
+                            </tr>
+                            </thead>
+                            <tbody style="height: 200px; max-height: 400px; overflow-y: auto;">
+                            <tr ng-repeat="log in HFLogs">
+                                <td>[[ $index + 1 ]]</td>
+                                <td>[[ log.event ]]</td>
+                                <td>[[ log.date ]]</td>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!------------ End of project log -------------->
+
         <div class="modal fade" id="header_forum_messages_modal" tabindex="-1">
             <div class="modal-dialog">
                 <div class="modal-content">
