HFForum Send Request

--- a/src/ZectranetBundle/Resources/views/layout.html.twig
+++ b/src/ZectranetBundle/Resources/views/layout.html.twig
@@ -87,7 +87,7 @@
                                 <div class="divider"></div>
                                 <p>
                                     <b>Message:</b>
-                                    <span style="white-space: nowrap; text-overflow: ellipsis; overflow: hidden;">
+                                    <span style="white-space: normal; text-overflow: ellipsis; overflow: hidden;">
                                         [[ requestQNA.message ]]
                                     </span>
                                 </p>
@@ -113,7 +113,7 @@
                                 <div class="divider"></div>
                                 <p>
                                     <b>Message:</b>
-                                    <span style="white-space: nowrap; text-overflow: ellipsis; overflow: hidden;">
+                                    <span style="white-space: normal; text-overflow: ellipsis; overflow: hidden;">
                                         [[ requesthf.message ]]
                                     </span>
                                 </p>
@@ -156,7 +156,7 @@
                                 <div class="divider"></div>
                                 <p>
                                     <b>Message:</b>
-                                    <span style="white-space: nowrap; text-overflow: ellipsis; overflow: hidden;">
+                                    <span style="white-space: normal; text-overflow: ellipsis; overflow: hidden;">
                                         [[ request.message ]]
                                     </span>
                                 </p>
