--- a/src/ZectranetBundle/Resources/views/headerForumSubHeader.html.twig
+++ b/src/ZectranetBundle/Resources/views/headerForumSubHeader.html.twig
@@ -31,7 +31,7 @@
     <div class="row">
         <div class="col-md-12">
             <button class="btn btn-primary pull-right" data-target="#header_forum_thread_add" data-toggle="modal">
-                Start new threadss
+                Start new thread
             </button>
         </div>
     </div>
