HFForum Send Request

--- a/src/ZectranetBundle/Resources/views/QnAForum.html.twig
+++ b/src/ZectranetBundle/Resources/views/QnAForum.html.twig
@@ -87,7 +87,7 @@
                             <a href="{{ path('zectranet_user_page', {'user_id': thread.user.id}) }}" style="font-size: 1.2em;">
                                 {{ thread.user.username }}
                             </a>
-                            {{ thread.date | date('Y-m-d H:i:s') }}
+                            {{ thread.date | date('Y-m-d H:i') }}
                         </div>
                     </div>
 
