--- a/src/ZectranetBundle/Resources/views/headerForumSubHeader.html.twig
+++ b/src/ZectranetBundle/Resources/views/headerForumSubHeader.html.twig
@@ -64,7 +64,7 @@
                         <small class="text-muted"> By
                             <a href="{{ path('zectranet_user_page', {'user_id': thread.userID}) }}">
                                 {{ thread.user.username }}
-                            </a>, {{ thread.date | date('Y-m-d H:i:s') }}
+                            </a>, {{ thread.date | date('Y-m-d H:i') }}
                         </small>
                     </div>
                     <div class="col-xs-1">
