--- a/src/ZectranetBundle/Resources/views/QnAThread.html.twig
+++ b/src/ZectranetBundle/Resources/views/QnAThread.html.twig
@@ -16,10 +16,13 @@
             <li>
                 <a href="{{ path('zectranet_show_QnA_forum', { 'project_id': forum.id }) }}">{{ forum.name }}</a>
             </li>
+            <li class="active">
+                {{ thread.title }}
+            </li>
         </ol>
     </div>
 
-    <div class="page-header">
+    <div class="page-header" style="margin-top: 0;">
         <div class="row">
             <div class="col-md-9">
                 <span style="font-size: 22px; font-family: 'PT Sans Narrow', sans-serif;">{{ thread.title }}</span>
@@ -52,40 +55,41 @@
 
     <div class="row">
         <div class="col-md-12">
-
             <div class="post">
-                <div class="container-post-message" style="display: inline-block;">
-                    <div class="post-message">
-                        {{ thread.message }}
-                    </div>
+                <div class="row">
+                    <div class="col-xs-9">
+                        <div class="post-message">
+                            {{ thread.message }}
+                        </div>
 
-                    <div class="right-thread-content thread-keywords" style="margin: 15px 0;">
-                        {% for i in 0..keywords | length - 1 %}
-                            <span style="color: #0c65a5; margin-left: 3px;">{{ keywords[i] }}</span>
-                        {% endfor %}
+                        <div class="right-thread-content thread-keywords" style="margin: 15px 0;">
+                            {% for i in 0..keywords | length - 1 %}
+                                <span style="color: #0c65a5; margin-left: 3px;">{{ keywords[i] }}</span>
+                            {% endfor %}
+                        </div>
+                    </div>
+                    <div class="col-xs-3">
+                        <div class="informer text-muted" style="display: inline-block; vertical-align: top;">
+                            <div>asked {{ thread.date | date('d-m-y H:i') }}</div>
+
+                            <div class="informer-user">
+                                <a href="{{ path('zectranet_user_page', {'user_id': thread.user.id}) }}" style="text-decoration: none; vertical-align: top;">
+                                    <img class="img-responsive" src="{{ asset('') }}documents/{{ thread.user.avatar }}">
+                                </a>
+
+                                <a href="{{ path('zectranet_user_page', {'user_id': thread.user.id}) }}" style="text-decoration: none; vertical-align: top;">
+                                    {{ thread.user.username }}
+                                </a>
+                            </div>
+                        </div>
                     </div>
                 </div>
-
-                <div class="informer text-muted" style="display: inline-block; vertical-align: top;">
-                    <div>asked {{ thread.date | date('Y-m-d H:i') }}</div>
-
-                    <div class="informer-user">
-                        <a href="{{ path('zectranet_user_page', {'user_id': thread.user.id}) }}" style="text-decoration: none; vertical-align: top;">
-                            <img class="img-responsive" src="{{ asset('') }}documents/{{ thread.user.avatar }}">
-                        </a>
-
-                        <a href="{{ path('zectranet_user_page', {'user_id': thread.user.id}) }}" style="text-decoration: none; vertical-align: top;">
-                            {{ thread.user.username }}
-                        </a>
-                    </div>
-                </div>
-
             </div>
 
         </div>
     </div>
 
-    <div class="page-header">
+    <div class="page-header" style="margin-top: 15px;">
         <span style="font-size: 22px; font-family: 'PT Sans Narrow', sans-serif;">
             {{ thread.posts | length }}
             {% if thread.posts | length == 1 %}
@@ -104,51 +108,51 @@
 
     {% for post in thread.posts %}
 
-        <div class="posts">
-            <div class="row">
-                <div class="col-md-12">
-
-                    <div class="post">
-                        <div class="container-post-message" style="display: inline-block;">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="post">
+                    <div class="row">
+                        <div class="col-xs-9 col-md-9" style="display: inline-block;">
                             <div class="post-message" style="border-bottom: none;">
                                 {{ post.message }}
                             </div>
                         </div>
 
-                        <div class="informer text-muted" style="display: inline-block; vertical-align: top;">
-                            <div>answer {{ post.posted | date('Y-m-d H:i') }}</div>
+                        <div class="col-xs-3 col-md-3 text-muted informer" style="display: inline-block;">
+                            <div>answer {{ post.posted | date('d-m-y H:i') }}</div>
 
                             <div class="informer-user">
-                                <a href="{{ path('zectranet_user_page', {'user_id': post.user.id}) }}" style="text-decoration: none; vertical-align: top;">
+                                <a href="{{ path('zectranet_user_page', {'user_id': post.user.id}) }}" style="text-decoration: none;">
                                     <img class="img-responsive" src="{{ asset('') }}documents/{{ post.user.avatar }}">
                                 </a>
 
-                                <a href="{{ path('zectranet_user_page', {'user_id': post.user.id}) }}" style="text-decoration: none; vertical-align: top;">
+                                <a href="{{ path('zectranet_user_page', {'user_id': post.user.id}) }}" style="text-decoration: none;">
                                     {{ post.user.username }}
                                 </a>
                             </div>
                         </div>
                     </div>
-
+                    <div class="clearfix"></div>
                 </div>
             </div>
         </div>
 
     {% endfor %}
 
-    <div class="col-md-12">
-        <form class="posts" action="{{ path('zectranet_QnA_add_post', { 'thread_id': thread.id }) }}" method="post">
-            <div class="input-group">
-                <textarea style="resize: vertical;" name="message" class="form-control" rows="3"></textarea>
-                <div class="input-group-addon" style="padding: 0;">
-                    <button type="submit" class="btn btn-default btn-primary" style="width: 72px; height: 72px;">
-                        Answer
-                    </button>
+    <div class="row" style="margin-top: 10px;">
+        <div class="col-md-12">
+            <form action="{{ path('zectranet_QnA_add_post', { 'thread_id': thread.id }) }}" method="post">
+                <div class="input-group">
+                    <textarea style="resize: vertical;" name="message" class="form-control" rows="3"></textarea>
+                    <div class="input-group-addon" style="padding: 0;">
+                        <button type="submit" class="btn btn-default btn-primary" style="width: 72px; height: 72px;">
+                            Answer
+                        </button>
+                    </div>
                 </div>
-            </div>
-        </form>
+            </form>
+        </div>
     </div>
-
 
     <div class="modal fade" id="delete_QnA_project" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog">
