--- a/src/ZectranetBundle/Resources/views/headerForum.html.twig
+++ b/src/ZectranetBundle/Resources/views/headerForum.html.twig
@@ -5,10 +5,10 @@
 {% block body %}
     <div class="page-header">
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-9 col-xs-6" style="white-space: normal; word-wrap: break-word;">
                 <span style="font-size: 30px; font-family: 'PT Sans Narrow', sans-serif; font-weight: bold;">{{ forum.name }}</span>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-3 col-xs-6">
                 {% if forum.ownerID == app.user.id or (is_granted('ROLE_ADMIN')) %}
                     <div class="pull-right">
                         <div class="pull-right" data-toggle="tooltip" data-placement="top" title="Delete This Project">
