--- a/src/ZectranetBundle/Resources/views/headerForumSubHeader.html.twig
+++ b/src/ZectranetBundle/Resources/views/headerForumSubHeader.html.twig
@@ -3,12 +3,23 @@
 {% block title %}{{ sub.title }}{% endblock %}
 
 {% block body %}
-    <div class="page-header">
+    <div class="row">
+        <ol class="breadcrumb"  style="margin: 0 -30px; border-radius:0 !important; padding: 12px 50px; background-color: #fbfbfb; ">
+            <li>
+                <a href="{{ path('zectranet_show_header_forum', { 'project_id': forum.id }) }}">{{ forum.name }}</a>
+            </li>
+            <li class="active">
+                {{ sub.title }}
+            </li>
+        </ol>
+    </div>
+
+    <div class="page-header" style="margin-top: 10px;">
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-xs-6 col-md-9" style="white-space: normal; word-wrap: break-word;">
                 <span style="font-size: 30px; font-family: 'PT Sans Narrow', sans-serif; font-weight: bold;">{{ sub.title }}</span>
             </div>
-            <div class="col-md-6">
+            <div class="col-xs-6 col-md-3">
                 {% if forum.ownerID == app.user.id or (is_granted('ROLE_ADMIN')) %}
                     <div class="pull-right">
                         <div class="pull-right" data-toggle="tooltip" data-placement="top" title="Delete This Project">
