--- a/src/ZectranetBundle/Resources/views/headerForumThread.html.twig
+++ b/src/ZectranetBundle/Resources/views/headerForumThread.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
     <div class="row">
-        <ol class="breadcrumb"  style="margin: 0 -30px; border-radius:0px !important; padding: 12px 50px; background-color: #fbfbfb; ">
+        <ol class="breadcrumb" style="margin: 0 -30px; border-radius:0 !important; padding: 12px 50px; background-color: #fbfbfb; ">
             <li>
                 <a href="{{ path('zectranet_show_header_forum', { 'project_id': forum.id }) }}">{{ forum.name }}</a>
             </li>
@@ -15,9 +15,7 @@
         </ol>
     </div>
 
-
-
-    <div class="row panel panel-default" style="margin-top:20px; border:0px;">
+    <div class="row panel panel-default" style="margin-top:20px; border:0;">
         <div class="col-xs-2" style="padding: 10px;">
             <img class="img-responsive" style="margin: 0 auto;" src="{{ asset('') ~ 'documents/' ~ thread.user.avatar }}" alt="{{ thread.user.username }}"/>
             <p class="text-center" style="margin-top: 10px;">
@@ -25,7 +23,7 @@
                     {{ thread.user.name ~ ' ' ~ thread.user.surname ~ ' (' ~ thread.user.username ~ ')' }}
                 </a>
             </p>
-            <p class="text-center"><small class="text-muted">2 posts</small></p>
+            
         </div>
         <div class="col-xs-10" style="min-height: 150px;">
             <div class="page-header">
@@ -44,8 +42,7 @@
 
     </div>
 
-
-    <div class="row panel panel-default" style="border-width: 1px;border-style: solid;border-color: #F2F2F2;border-radius: 3px;">
+    <div class="row panel panel-default" style="border-width: 1px; border-style: solid; border-color: #F2F2F2; border-radius: 3px;">
         <div class="panel-heading topic-header-border" style="background-color: #337AB7; height: 50px; color:#fff;">
             <h5 align="left" style="margin-top: 6px;">Thread posts</h5>
         </div>
@@ -59,7 +56,7 @@
                                 {{ post.user.name ~ ' ' ~ post.user.surname ~ ' (' ~ post.user.username ~ ')' }}
                             </a>
                         </p>
-                        <p class="text-center"><small class="text-muted">2 posts</small></p>
+                        
                     </div>
                     <div class="col-xs-10" style="min-height: 150px;">
                         <small class="pull-right text-muted" style="margin-top: 8px;">Posted {{ post.posted | date('Y-m-d H:i') }}</small>
